[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 61.0", "wheel"]

[project]
name = "openctm"
version = "0.0.6"
requires-python = ">=3.7"
authors = [{name = "Michael Dawson-Haggerty", email = "mikedh@kerfed.com"}]
license = {file = "LICENSE.md"}
description = "Provide a loader for OpenCTM files"
keywords = ["graphics", "OpenCTM"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Graphics :: 3D Modeling"
]
urls = {Homepage = "https://github.com/trimesh/openctm"}

dependencies = ["numpy"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[tool.setuptools]
packages = [
    "openctm",
]

[project.optional-dependencies]
tests = ["pytest", "trimesh"]

